prevent brand-logo from breaking on next line on small screen, add pagination function app.py faulty

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,12 @@
 }
 
 
+.nav-wrapper .brand-logo{
+
+    white-space: nowrap;
+}
+
+
 /* slider*/
 
 .caption h2 {
